Mut4All/bug-labels/rust/F-specialization/113045.txt
Issue Title:
ICE: min_specialization: `Ok(['?0, Const { ty: usize, kind: Leaf(0x0000000000000000) }])` is not fully resolved · Issue #113045 · rust-lang/rust · GitHub

Rust Code:
#![feature(min_specialization)]

trait X {
}

impl<'a, const N: usize> X for [(); N] {
}

impl<'a, Unconstrained> X for [(); 0] {
}

fn main() {}

Bug Trace:
Compiling ice-min-specialization-20230626 v0.1.0 (/home/kisaragi/static/IdeaProjects/ice-910321)
error[E0207]: the type parameter `Unconstrained` is not constrained by the impl trait, self type, or predicates
 --> src/main.rs:9:10
  |
9 | impl<'a, Unconstrained> X for [(); 0] {
  |          ^^^^^^^^^^^^^ unconstrained type parameter

error: specialization impl does not specialize any associated items
 --> src/main.rs:9:1
  |
9 | impl<'a, Unconstrained> X for [(); 0] {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: impl is a specialization of this impl
 --> src/main.rs:6:1
  |
6 | impl<'a, const N: usize> X for [(); N] {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

thread 'rustc' panicked at '`Ok(['?0, Const { ty: usize, kind: Leaf(0x0000000000000000) }])` is not fully resolved', /rustc/df77afbcaf3365a32066a8ca4a00ae6fc9a69647/compiler/rustc_infer/src/infer/mod.rs:1356:9
stack backtrace:
   0: rust_begin_unwind
             at /rustc/df77afbcaf3365a32066a8ca4a00ae6fc9a69647/library/std/src/panicking.rs:593:5
   1: core::panicking::panic_fmt
             at /rustc/df77afbcaf3365a32066a8ca4a00ae6fc9a69647/library/core/src/panicking.rs:67:14
   2: <rustc_infer::infer::InferCtxt>::fully_resolve::<&rustc_middle::ty::list::List<rustc_middle::ty::subst::GenericArg>>
   3: rustc_hir_analysis::impl_wf_check::min_specialization::check_min_specialization
   4: rustc_hir_analysis::impl_wf_check::check_mod_impl_wf
   5: <rustc_middle::hir::map::Map>::for_each_module::<rustc_hir_analysis::check_crate::{closure#2}::{closure#0}::{closure#0}>
   6: <rustc_session::session::Session>::track_errors::<rustc_hir_analysis::check_crate::{closure#2}, ()>
   7: rustc_hir_analysis::check_crate
   8: rustc_interface::passes::analysis
   9: <rustc_middle::ty::context::GlobalCtxt>::enter::<rustc_driver_impl::run_compiler::{closure#1}::{closure#2}::{closure#4}, core::result::Result<(), rustc_span::ErrorGuaranteed>>
  10: <rustc_interface::interface::Compiler>::enter::<rustc_driver_impl::run_compiler::{closure#1}::{closure#2}, core::result::Result<core::option::Option<rustc_interface::queries::Linker>, rustc_span::ErrorGuaranteed>>
  11: <scoped_tls::ScopedKey<rustc_span::SessionGlobals>>::set::<rustc_interface::interface::run_compiler<core::result::Result<(), rustc_span::ErrorGuaranteed>, rustc_driver_impl::run_compiler::{closure#1}>::{closure#0}, core::result::Result<(), rustc_span::ErrorGuaranteed>>
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.

error: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.72.0-nightly (df77afbca 2023-06-12) running on x86_64-unknown-linux-gnu

note: compiler flags: --crate-type bin -C embed-bitcode=no -C debuginfo=2 -C linker=clang -C incremental=[REDACTED] -C link-arg=-fuse-ld=/home/kisaragi/.local/bin/mold

note: some of the compiler flags provided by cargo are hidden

query stack during panic:
#0 [check_mod_impl_wf] checking that impls are well-formed in top-level module
#1 [analysis] running analysis passes on this crate
end of query stack
For more information about this error, try `rustc --explain E0207`.
error: could not compile `ice-min-specialization-20230626` (bin "ice-min-specialization-20230626") due to 2 previous errors

Bug Labels:
C-bug, E-needs-test, F-specialization, I-ICE, T-compiler
